--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<div class="inner">
-						<p class="copyright"><img src="https://www.okaysamurai.com/puppets/images/rm.png"><br />Manas Malla </br> Website template by Okay Samurai!</p>
+						<p class="copyright"><img src="https://www.okaysamurai.com/puppets/images/rm.png"><br />Manas Malla 😀</br> Website template by Okay Samurai!</p>
 					</div>
 				</footer>
 
