--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<div class="inner">
 									<h3>About Me</h3>
 									<p>Wanna Know More About Me.... My inspiration.....My favourites.....My suggestions...!. </p>
-									<a href="http://okaysamurai.com/puppets/Linden.zip" class="button style1 fit" download>Click Here</a>
+									<a href="https://www.instagram.com/malla_manas" class="button style1 fit" download>Click Here</a>
 								</div>
 							</div>
 							
@@ -82,7 +82,7 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<div class="inner">
-						<p class="copyright"><img src="https://www.okaysamurai.com/puppets/images/rm.png"><br />Manas Malla 😀</br> Website template by Okay Samurai!</p>
+						<p class="copyright"><img src="https://www.okaysamurai.com/puppets/images/rm.png"><br />Manas Malla </br> Website template by Okay Samurai!</p>
 					</div>
 				</footer>
 
