--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							</div>
 							
 							<div class="box">
-								<a href="https://developer.google.com/" class="image fit" download><img src="" alt="" /></a>
+								<a href="https://developer.google.com/" class="image fit" download><img src="android.png" alt="" /></a>
 								<div class="inner">
 									<h3>Linden</h3>
 									<p>Standing and walking versions of a guitar playing kid. Featured in <a href="https://youtu.be/1mTSNfMSFck">Mixing Animation and Reality</a>.</p>
