--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 							<div class="box">
 								<a href="https://developer.google.com/" class="image fit" download><img src="android.png" alt="" /></a>
 								<div class="inner">
-									<h3>Linden</h3>
-									<p>Standing and walking versions of a guitar playing kid. Featured in <a href="https://youtu.be/1mTSNfMSFck">Mixing Animation and Reality</a>.</p>
-									<a href="http://okaysamurai.com/puppets/Linden.zip" class="button style1 fit" download>Download</a>
+									<h3>The Complete Android Developer Course</h3>
+									<p>Wanna become an Android Developer so that you can make wonderful apps? Just visit this free course on <a href="https://www.youtube.com/watch?v=59PLBH0fyKc&list=PL6DTw5U9KXYmDe_zllombZBFbUxB_XgoO"> The Complete Android and Java Developer Course </a> today! </p>
+									<a href="https://www.youtube.com/watch?v=59PLBH0fyKc&list=PL6DTw5U9KXYmDe_zllombZBFbUxB_XgoO" class="button style1 fit" download>Learn Now</a>
 								</div>
 							</div>
 					</div>
