--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <html>
 	<head>
 		<title>Manas Malla</title>
-		<meta name="description" content="Free downloadable puppet files for Adobe Character Animator.">
+		<meta name="description" content="My official website!">
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="https://www.okaysamurai.com/puppets/assets/css/main.css" />
@@ -75,9 +76,21 @@
 									<a href="https://www.youtube.com/watch?v=59PLBH0fyKc&list=PL6DTw5U9KXYmDe_zllombZBFbUxB_XgoO" class="button style1 fit" download>Learn Now</a>
 								</div>
 							</div>
+							
+							<div class="box">
+								<a href="https://play.google.com/store/apps/details?id=com.techsafari.manas.ecofun" class="image fit" download><img src="ecofun.png" alt="" /></a>
+								<div class="inner">
+									<h3>EcoFun</h3>
+									<p> This app helps us to be ecofriendly and Nourish our Blue & Green Planet by helping us measure 📏 our carbon footprint, encourage us to grow trees! Also it helps you to be fit💪🚴🏃🔥 Try it today! <br> 
+									 Play More! Win More! Nourish our Blue & Green Planet More! </p>
+									<a href="https://play.google.com/store/apps/details?id=com.techsafari.manas.ecofun" class="button style1 fit" download>Get the App</a>
+								</div>
+							</div>
 					</div>
 				
 				</div>
+
+
 
 			<!-- Footer -->
 				<footer id="footer">
